package ar.edu.utn.frba.ddsi.common.models.enums;

public enum TipoOrganizacion {
  GUBERNAMENTAL, ONG, EMPRESA, INSTITUCION
}
