package ar.edu.utn.frba.ddsi.donaciones.models.enums;

public enum EstadoBien {
  NUEVO,
  USADO
}
